feat: create admin functions

--- a/.env.local.template
+++ b/.env.local.template
@@ -13,6 +13,8 @@ SESSION_REMOTE_LOG_ADDRESS=
 SESSION_REMOTE_LOG_PREFIX_ERROR=[ERROR]
 SESSION_REMOTE_LOG_ADDRESS_ERROR=
 
+SESSION_ADMIN_ADDRESS=
+
 POLLER_TEST_WAIT_TIME_SECONDS=10
 POLLER_TEST_TIMESTAMP_ACCURACY_SECONDS=5
 POLLER_NODE_FETCH_INTERVAL_SECONDS=60
